# CryAssetThumbnailStudio-Plugin

./: .gitignore  README.md
Code/Sandbox/Plugins/AssetThumbnailStudio/: CMakeLists.txt  CryAgentThumbnailExtension.cpp  CryAgentThumbnailExtension.h  MitchellDownscaler.cpp  MitchellDownscaler.h  Plugin.cpp  Plugin.h  StdAfx.cpp  StdAfx.h  StudioAssets.h  ThumbnailGenerationService.cpp  ThumbnailGenerationService.h  ThumbnailJobQueue.cpp  ThumbnailJobQueue.h  ThumbnailStageRenderer.cpp  ThumbnailStageRenderer.h
